welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: not found: value u
      u=((i+decalage)%getMondeHauteur)
      ^Array2:16: error: not found: value u
      setCouleurBrosse(T(u))
                         ^